--- a/angular/PortalOSK/package.json
+++ b/angular/PortalOSK/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.1.0",
     "rxjs": "~6.4.0",
