--- a/angular/PortalOSK/angular.json
+++ b/angular/PortalOSK/angular.json
@@ -28,18 +28,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/font-awesome/css/font-awesome.css",
               "src/styles.scss"
-
             ],
-            "stylePreprocessorOptions": {
-              "includePaths": [
-                "../node_modules/bootstrap/scss"
-              ]
-            },
-            "scripts": ["./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -99,11 +90,6 @@
             "styles": [
               "src/styles.scss"
             ],
-            "stylePreprocessorOptions": {
-              "includePaths": [
-                "../node_modules/bootstrap/scss"
-              ]
-            },
             "scripts": []
           }
         },
