--- a/angular/PortalOSK/package.json
+++ b/angular/PortalOSK/package.json
@@ -19,11 +19,14 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "angular-font-awesome": "^3.1.2",
+    "angular-resize-event": "^1.0.0",
     "bootstrap": "^4.3.1",
-    "font-awesome": "^4.7.0",
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.1.0",
+    "ngx-device-detector": "^1.3.9",
+    "ngx-perfect-scrollbar": "^8.0.0",
+    "popper": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
