--- a/angular/PortalOSK/package.json
+++ b/angular/PortalOSK/package.json
@@ -19,10 +19,13 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "angular-resize-event": "^1.0.0",
     "bootstrap": "^4.3.1",
-    "@fortawesome/fontawesome-free": "^5.5.0",
+    "chart.js": "^2.8.0",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.1.0",
     "ngx-device-detector": "^1.3.9",
     "ngx-perfect-scrollbar": "^8.0.0",
