--- a/angular/PortalOSK/package.json
+++ b/angular/PortalOSK/package.json
@@ -23,6 +23,7 @@
     "angular-resize-event": "^1.0.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
+    "deep-object-diff": "^1.1.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "ng2-charts": "^2.3.0",
