--- a/angular/PortalOSK/package.json
+++ b/angular/PortalOSK/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "~8.1.2",
     "@fortawesome/fontawesome-free": "^5.5.0",
     "angular-resize-event": "^1.0.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "chart.js": "^2.8.0",
     "deep-object-diff": "^1.1.0",
     "jquery": "^3.4.1",
@@ -36,13 +36,13 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
